# TrueRisk

./: .dockerignore  .env.example  .env.local  .env.production.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HACKATON.md  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
backend/: .coverage  Dockerfile  entrypoint.sh  migrate-entrypoint.sh  pyproject.toml  train_overnight.py
backend/alembic/: env.py
backend/alembic/versions/: 13ec9d1cfb62_add_preparedness_emergency_plan_and_.py  30bbbe6a8de3_add_push_subscriptions_and_community_.py  4022f8178e27_add_sms_subscriptions_table.py  5de10cab8475_add_risk_forecasts_table.py  6a290f8ac736_add_user_id_to_push_subscriptions.py  7901d9da7df8_add_dana_score_to_risk_scores.py  80678029a7c0_add_seismic_coldwave_windstorm_scores.py  86bb471717f0_change_photo_url_to_text.py  a1b2c3d4e5f6_add_risk_narratives_table.py  a3c7e9f12b45_add_safe_points_table.py  a3f7c2d19e01_add_enhanced_community_report_fields.py  a4b5c6d7e8f9_add_email_notifications_enabled.py  b1e4a7f29c03_add_report_verifications_table.py  b5d2f9a81c34_add_water_restrictions_table.py  c4ed565373d5_initial_schema.py  c7d8e9f01a23_add_api_keys_table.py  ca6a7bcfdd4e_expand_user_model_auth_and_profile.py  cb76d942f4bc_add_safety_check_tables.py  d4a1e8f30b72_add_whatsapp_and_telegram_fields_to_users.py  e8f3a1b72c56_add_heat_vulnerability_fields_to_users.py  (+12 more)
backend/app/: config.py  database.py  main.py  rate_limit.py
backend/app/api/: advisor.py  auth.py  (+29 more)
backend/scripts/: backup.sh  seed_demo.py
backend/tests/: conftest.py  test_adjacency.py  test_alert_crud.py  test_alert_delivery_channels.py  test_alert_escalation.py  test_alert_intelligence.py  test_alert_intelligence_unit.py  test_alerts.py  test_audit_live_apis.py  test_auth_flow.py  test_chat_schemas.py  test_chat_service.py  test_climate_projections.py  test_community_verification.py  test_composite_risk.py  test_composite_risk_edge_cases.py  test_compound_risk.py  test_config_validation.py  test_csrf_middleware.py  test_dana_ml.py  test_dana_risk.py  test_data_health.py  test_deliver_multi_channel.py  test_drought_attention.py  test_ds_aemet_client.py  test_ds_copernicus_cams.py  test_ds_copernicus_efas.py  test_ds_copernicus_ems.py  test_ds_copernicus_land.py  test_ds_ecmwf_seasonal.py  test_ds_http.py  test_ds_ign_seismic.py  test_ds_ine_demographics.py  test_ds_nasa_firms.py  test_ds_nasa_power.py  test_ds_open_meteo.py  test_ds_open_meteo_upper_air.py  test_ds_openaq.py  test_ds_ree_energy.py  test_ds_usgs_earthquake.py  (+51 more)
(+674 files in other folders)
